Bug 121468 - Cannot open ppt files
Summary: Cannot open ppt files
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice Online
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.0 target:6.1....
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-16 17:14 UTC by Gabriel Masei
Modified: 2018-12-21 15:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Masei 2018-11-16 17:14:23 UTC
Steps to reproduce:
1. Open any file with extension .ppt in LibreOffice Online.

Behavior:
1. The document can't be opened.
2. Displays the following error message: "Failed to load the document. Please ensure the file type is supported and not corrupted, and try again."
3. Presentation files with extensions .pptx and .odp are successfully opened.
4. It seems that this problem comes from Core.

Was reproduced:
1. With the LibreOffice Online docker image based on master branch: https://hub.docker.com/r/libreoffice/online/
2. With Version 6.1.3 of Core and Online.

Can't reproduce in 6.0.3.

No other versions were tested.
Comment 1 Thorsten Behrens (allotropia) 2018-11-28 11:32:31 UTC
No repro here (recent master, against nextcloud richdocument plugin), sorry.
Comment 2 goldenrex 2018-11-29 09:28:00 UTC
Bug unconfirmed.

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 0f25a3c36f27fd51453b9a9115f236b83c143684
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-11-27_20:06:55
Locale: zh-TW (zh_TW); UI-Language: en-US
Calc: threaded

Bug not reproducible in version 6.3.0.0.alpha0+ (x64)
Comment 4 Commit Notification 2018-12-06 10:29:18 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/9fae95fef82bab8e0760d49ccce51a30ab705941%5E%21

fix tdf#121468: preload fixes for Impress filters

It will be available in 6.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Gabriel Masei 2018-12-06 12:47:11 UTC
I tested master, libreoffice-6-2 and libreoffice-6-1 branches and it seems that the issue was fixed. Thanks for the fix and feedback.
Comment 6 Aron Budea 2018-12-06 14:29:05 UTC
Thanks for retesting, setting bug report to VERIFIED.
Comment 7 Commit Notification 2018-12-12 16:30:43 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-6-1-4":

https://git.libreoffice.org/core/+/2e5d804ffa7ce30079d0b1ee52d1a48137e2e68d%5E%21

fix tdf#121468: preload fixes for Impress filters

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gabriel Masei 2018-12-21 15:02:28 UTC
Tested in Core 6.1.4.2 and Online 6.1.3.2. Could not reproduce the issue.