fix tdf#121468: preload fixes for Impress filters

was: Re-factor internal filter logic, and impl. preload properly.

Reviewed-on: https://gerrit.libreoffice.org/63761
Tested-by: Jenkins
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
(cherry picked from commit 7b34fb18a4d60bfc4e32b7c382ac596cbc2e776f)
Reviewed-on: https://gerrit.libreoffice.org/63850

Conflicts:
	sd/inc/sdfilter.hxx
	sd/source/ui/app/sddll.cxx

Change-Id: I4c55ceb19d5db2c1e4756901d0d8b14878641a99
Reviewed-on: https://gerrit.libreoffice.org/64616
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>